# jup-rust-sdk

./: Cargo.toml  LICENSE  README-release.md  README.md
.github/workflows/: auto-tag.yml  publish.yml  rust.yml
examples/: Cargo.toml  README.md
examples/src/: lib.rs  main.rs  recurring.rs  swap.rs  token.rs  trigger.rs  ultra.rs
jup-ag-sdk/: Cargo.toml
jup-ag-sdk/src/: client.rs  error.rs  lib.rs
jup-ag-sdk/src/client/: recurring_api.rs  swap_api.rs  token_api.rs  trigger_api.rs  ultra_api.rs
jup-ag-sdk/src/types/: dex_enum.rs  mod.rs  quote_request.rs  quote_response.rs  recurring.rs  swap_transaction.rs  token.rs  trigger.rs  ultra.rs
tests/: Cargo.toml
tests/src/: common.rs  lib.rs  recurring.rs  swap.rs  token.rs  trigger.rs  ultra.rs
