[package]
name = "jup-ag-sdk"
version = "1.0.6"
edition = "2024"
license-file = "../LICENSE"
readme = "../README.md"
description = "A Rust SDK for Jupiter exchange APIs."
authors = ["thrishank <thrishankkalluru@gmail.com"]
keywords = ["rust", "sdk", "jupiter", "exchange", "api"]
exclude = ["/target/*", "/examples/*", "/tests/*"]

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
